# perfetto

src/trace_processor/: BUILD.gn  forwarding_trace_parser.cc  trace_processor_impl.cc  trace_reader_registry.cc
src/trace_processor/importers/wvr/: BUILD.gn  Event.h  EventDescription.h  EventParam.h  Param.h  defXML.h  v732smpdefXML.h  v764smpdefXML.h  wind_exit_dispatch_event_tracker.cc  wind_exit_dispatch_event_tracker.h  wind_state_event_tracker.cc  wind_state_event_tracker.h  wvrLib.cc  wvrLib.h  wvr_parser.cc  wvr_parser.h  xmlLib.cc  xmlLib.h
src/trace_processor/types/: trace_processor_context.h
src/trace_processor/util/: trace_type.cc  trace_type.h
ui/src/core/: default_plugins.ts
ui/src/core_plugins/commands/: index.ts
ui/src/frontend/: error_dialog.ts  sidebar.ts
