source_set("full") {
  sources = [
    "wvr_parser.cc",
    "wvr_parser.h",
    "wind_exit_dispatch_event_tracker.cc",
    "wind_exit_dispatch_event_tracker.h",
    "wind_state_event_tracker.cc",
    "wind_state_event_tracker.h",
    "tinyxml2.cc",
    "tinyxml2.h",
    "defXML.h",
    "Event.h",
    "EventDescription.h",
    "EventParam.h",
    "Param.h",
    "xmlLib.cc",
    "xmlLib.h",
    "wvrLib.cc",
    "wvrLib.h",
  ]
  deps = [
    "../../../../gn:default_deps",
    "../../importers/common",
    "../../sorter",
    "../../storage",
  ]
}